--- a/package.json
+++ b/package.json
@@ -28,30 +28,31 @@
     "file-loader": "^1.1.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.0.4",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "resolve-url-loader": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "2.9.1",
-    "webpack-dev-server": "^3.1.11"
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "axios": "^0.17.0",
     "bcrypt": "^2.0.1",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.19.0",
     "bourbon": "^4.3.4",
     "connect-mongo": "^2.0.0",
     "cookie-parser": "^1.4.3",
-    "enzyme": "^3.1.0",
-    "express": "^4.16.2",
-    "express-session": "^1.15.6",
+    "enzyme": "^3.10.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "express-validator": "^4.3.0",
     "moment": "^2.19.1",
-    "mongoose": "^5.0.0-rc1",
+    "mongoose": "^5.6.1",
     "morgan": "^1.9.0",
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.6.0",
@@ -61,7 +62,7 @@
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.0.0",
     "shortid": "^2.2.8",
-    "tar": "^4.4.8"
+    "tar": "^4.4.10"
   },
   "jest": {
     "moduleNameMapper": {
