--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "3.3.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "acorn": "^6.1.1",
+    "acron": "^1.0.5",
+    "ajv-keywords": "^3.4.0",
     "axios": "^0.18.1",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.19.0",
@@ -62,7 +64,8 @@
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.0.0",
     "shortid": "^2.2.8",
-    "tar": "^4.4.10"
+    "tar": "^4.4.10",
+    "webpack": "^4.35.0"
   },
   "jest": {
     "moduleNameMapper": {
