--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
-    "eslint-loader": "^1.9.0",
+    "eslint-loader": "^2.1.2",
     "file-loader": "^1.1.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.0.4",
@@ -65,6 +65,7 @@
     "react-test-renderer": "^16.0.0",
     "shortid": "^2.2.8",
     "tar": "^4.4.10",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.0"
   },
   "jest": {
